Update profilt details

--- a/profile.html
+++ b/profile.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>672115047 Samakom Prompanya</h1>
+    <p>Hello, My name is Samakom Prompanya. <br>
+    I'm a student at Chiang Mai University.</p>
 </body>
 </html>
