--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <a href="profile.html">My Profile</a>
+    <h1>
+        Anawat Jandee
+    </h1>
+    <p>
+        672115049
+    </p>
 </body>
 </html>
