--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <a href="profile.html">My Profile</a>
+
+    <img src="picture.jpeg" alt="A description of the image" width="300">
 </body>
 </html>
