--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="CAMTLOGO.jpg" alt="CAMT Logo" width="200">
     <a href="profile.html">My Profile</a>
 
 
